--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>auctoa-property-whisper</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Immobilienbewertung mit auctoa</title>
+    <meta name="description" content="Immobilienbewertung mit Auctoa" />
+    <meta name="author" content="Immobilienbewertung" />
 
-    <meta property="og:title" content="auctoa-property-whisper" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Immobilienbewertung mit auctoar" />
+    <meta property="og:description" content="Immobilienbewertung mit auctoa" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="public/uploads/auctoa.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="public/uploads/auctoa.png" />
   </head>
 
   <body>
