feat: add sources to ai message

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Immobilienbewertung" />
 
     <meta property="og:title" content="Immobilienbewertung mit auctoar" />
-    <meta property="og:description" content="Immobilienbewertung mit auctoa" />
+    <meta property="og:description" content="Immobilienberatung mit auctoa" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="public/uploads/auctoa.png" />
 
