fix: reduce background image loading time

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Immobilienbewertung mit auctoa</title>
-    <meta name="description" content="Immobilienbewertung mit Auctoa" />
-    <meta name="author" content="Immobilienbewertung" />
+    <meta name="description" content="Immobilienberatung mit auctoa" />
+    <meta name="author" content="Immobilienberatung" />
 
-    <meta property="og:title" content="Immobilienbewertung mit auctoar" />
+    <!-- Preload background image -->
+    <link rel="preload" as="image" href="/uploads/background-image.webp" />
+
+    <meta property="og:title" content="Immobilienberatung mit auctoar" />
     <meta property="og:description" content="Immobilienberatung mit auctoa" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="public/uploads/auctoa.png" />
