--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Preload background image -->
     <link rel="preload" as="image" href="/uploads/background-image.webp" />
 
-    <meta property="og:title" content="Immobilienberatung mit auctoar" />
+    <meta property="og:title" content="Immobilienberatung mit auctoa" />
     <meta property="og:description" content="Immobilienberatung mit auctoa" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="public/uploads/auctoa.png" />
