--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
     <!-- Preload background image -->
     <link rel="preload" as="image" href="/uploads/background-image.webp" />
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,600;9..144,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="Immobilienberatung mit auctoa" />
     <meta property="og:description" content="Immobilienberatung mit auctoa" />
